--- a/lesson17/package.json
+++ b/lesson17/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "3.6.0",
-    "vanillajs-datepicker": "^1.2.0"
+    "notyf": "3.10.0",
+    "vanillajs-datepicker": "1.2.0"
   }
 }
