--- a/lesson17/package.json
+++ b/lesson17/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "3.6.0",
+    "maska": "1.5.0",
     "notyf": "3.10.0",
     "slim-select": "1.27.1",
     "sweetalert2": "11.4.9",
