lesson17 video05 time 08:10

--- a/lesson17/package.json
+++ b/lesson17/package.json
@@ -13,6 +13,7 @@
     "jquery": "3.6.0",
     "maska": "1.5.0",
     "notyf": "3.10.0",
+    "pickerjs": "1.2.1",
     "slim-select": "1.27.1",
     "sweetalert2": "11.4.9",
     "vanillajs-datepicker": "1.2.0"
