--- a/lesson17/package.json
+++ b/lesson17/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@kodie/colorfield": "^0.1.0",
     "jquery": "3.6.0",
     "maska": "1.5.0",
     "notyf": "3.10.0",
